# TeleGPT

./: Cargo.toml  config.example.json
src/modules/chat/: markdown.rs
