[package]
name = "telegpt"
version = "0.1.0"
edition = "2021"

[lib]
name = "telegpt_core"
path = "src/lib.rs"

[[bin]]
name = "telegpt"
path = "src/main.rs"
doc = false

[profile.release]
opt-level = "s"
panic = "abort"
lto = true
codegen-units = 1
strip = true

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
async-openai = "0.29.0"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"
pin-project-lite = "0.2"
async-trait = "0.1.88"
rusqlite = "0.37"
anyhow = "1.0.98"
log = "0.4"
pretty_env_logger = "0.5"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0.15"
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.13"

[patch.crates-io]
anstyle-query = { version = "1.1.2" }


